# Programare

./: README.md
FMI/ANUL II/Baze de date/: Lab1.sql  Lab2.sql  Lab3.sql  Lab3Procedures.sql  Lab5.sql
FMI/ANUL II/PLF/: lab2.pl  lab4.lisp  lab5.lisp
FMI/ANUL II/Retele/lab1/: client  server.c
FMI/ASC/L1/: Lab1.asm
FMI/ASC/L2/: Lab21.asm  Lab2Tema1.lst  Lab2Tema2.asm  Lab2Tema2.lst  Lab2Tema3.asm  ~Lab2Tema2.tmp  ~Lab2Tema3.tmp
FMI/ASC/L3/: Tema1L3.asm  Tema1L3.lst  ~Tema1L3.tmp
FMI/ASC/L5/: cerinta1.asm  cerinta2.asm  cerinta2.lst  cerinta3.lst  cerinta4.lst  ~cerinta5.tmp  ~tema.tmp
FMI/ASC/L6/: ex1.asm  ex2.asm
FMI/CNIHPC AN I/SEM 2/MPP/P3/: CMakeLists.txt  main.cpp  runner.py
FMI/ProgramareC/L1/: a.out  ex1  ex2  lab1ex1.c  lab1ex4  lab1ex5.c  lab1ex6  lab1ex6.c
FMI/ProgramareC/L10/: example2.c  exercitiu
FMI/ProgramareC/L2/: a.out  exercitiu1  exercitiu1.c
FMI/ProgramareC/L3/: example3.c  example4.c  example5  example5.c  factorial.c  matrix.c  quicksort  sort
FMI/ProgramareC/L4/: functions.c  quicksort  sum  sum.c
FMI/ProgramareC/Teme/: Tema2  Tema2.c
FMI/SEM 1/Fundamentele programarii/: Documentatie_Cheltuieli_de_familie.ods  Documentatie_Inchirieri_Filme.ods
PycharmProjects/CheltuieliDeFamilie (copy)/business/: cautari_services.py  rapoarte_services.py  stergeri_services.py
PycharmProjects/CheltuieliDeFamilie (copy)/infrastructura/: repository_cheltuieli.py
PycharmProjects/CheltuieliDeFamilie (copy)/prezentare/: user_interface.py
PycharmProjects/Lab2/: main.py
PycharmProjects/Lab2-tema/: main.py
PycharmProjects/pi/: main.py
(+1047 files in other folders)
